--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,3 +1,20 @@
 .my-headline {
   color: Magenta;
 }
+
+.new-dealio-button {
+  font-size: 16px;
+  a {
+    text-decoration: none;
+  }
+}
+
+.dealios-display {
+  text-decoration: underline;
+}
+
+.dealio-listing {
+  a:link {
+    text-decoration: none;
+  }
+}
